--- a/angular.json
+++ b/angular.json
@@ -72,14 +72,11 @@
             },
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/apexcharts/dist/apexcharts.min.js",
-              "node_modules/onscan.js/onscan.min.js"
+              "node_modules/apexcharts/dist/apexcharts.min.js"
             ],
             "allowedCommonJsDependencies": [
               "ngx-barcode"
-            ],
-            "serviceWorker": true,
-            "ngswConfigPath": "ngsw-config.json"
+            ]
           },
           "configurations": {
             "production": {
