--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.10.2",
-    "@types/onscan.js": "^1.5.2",
     "apexcharts": "^3.35.0",
     "bootstrap": "^5.1.3",
     "boxicons": "^2.1.2",
@@ -43,9 +42,8 @@
     "ngx-barcode": "^0.3.0",
     "ngx-moment": "^6.0.2",
     "ngx-toastr": "^14.2.4",
-    "onscan.js": "^1.5.2",
-    "primeicons": "^5.0.0",
-    "primeng": "^13.3.3",
+    "primeicons": "^6.0.1",
+    "primeng": "14.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
