--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,9 +19,9 @@ stages:
         steps:
           - task: NodeTool@0
             inputs:
-              versionSpec: "16.x"
+              versionSpec: "18.x"
           - script: npm install --legacy-peer-deps
-          - script: npm run build   --prod
+          - script: npm run build   --configuration production --build-optimizer
           - task: CopyFiles@2
             inputs:
                 SourceFolder: './dist'
