update cli to v 17

--- a/angular.json
+++ b/angular.json
@@ -136,10 +136,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "angular-admin-starter:build:production"
+              "buildTarget": "angular-admin-starter:build:production"
             },
             "development": {
-              "browserTarget": "angular-admin-starter:build:development"
+              "buildTarget": "angular-admin-starter:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -147,7 +147,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-admin-starter:build"
+            "buildTarget": "angular-admin-starter:build"
           }
         },
         "test": {
