--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "primeng": "16.4.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz",
     "zone.js": "^0.14.2"
   },
   "devDependencies": {
